<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            <Button
                android:id="@+id/effacerBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/effacer"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:backgroundTint="#DD2C00"/>
            <Button
                android:id="@+id/plusmoinsBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/plusmoins"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
            <Button
                android:id="@+id/pourcentageBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/pourcentage"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
            <Button
                android:id="@+id/divisionBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/division"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
            <Button
                android:id="@+id/septBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/sept"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
            <Button
                android:id="@+id/huitBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/huit"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
            <Button
                android:id="@+id/neufBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/neuf"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
            <Button
                android:id="@+id/multiplicationBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/multiplication"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
            <Button
                android:id="@+id/quatreBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/quatre"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
            <Button
                android:id="@+id/cinqBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/cinq"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
            <Button
                android:id="@+id/sixBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/six"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
            <Button
                android:id="@+id/soustractionBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/soustraction"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
            <Button
                android:id="@+id/unBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/un"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
            <Button
                android:id="@+id/deuxBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/deux"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
            <Button
                android:id="@+id/troisBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/trois"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
            <Button
                android:id="@+id/additionBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/addition"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
            <Button
                android:id="@+id/zeroBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="5"
                android:text="@string/zero"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
            <Button
                android:id="@+id/virguleBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/virgule"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
            <Button
                android:id="@+id/egaleBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/egale"
                android:background="@drawable/circle"
                android:textColor="#FFFFFF"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
        </TableRow>
    </TableLayout>
    <EditText
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Enter in a value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="false"
        android:inputType="none"
        android:textSize="36sp"
        android:textAlignment="textEnd"
        tools:ignore="LabelFor"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>